--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.2.2",
     "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "expo-av": "^8.1.0",
@@ -19,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal-datetime-picker": "^8.5.4",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
