--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal-datetime-picker": "^8.5.4",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
