--- a/app.json
+++ b/app.json
@@ -22,7 +22,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "com.fruchtiapps.breakup",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.fruchtiapps.breakup",
+      "versionCode": 1
     }
   }
 }
