--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.2.2",
@@ -15,11 +13,13 @@
     "expo-font": "^8.1.0",
     "expo-in-app-purchases": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
+    "expo-splash-screen": "^0.2.0",
+    "expo-updates": "~0.1.0",
     "firebase": "^7.9.0",
     "lodash": "^4.17.15",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native": "~0.61.5",
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal-datetime-picker": "^8.5.4",
@@ -28,7 +28,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-svg": "^11.0.1",
-    "react-native-unimodules": "^0.9.0",
+    "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^8.1.1",
     "react-navigation": "^4.3.7",
@@ -36,8 +36,11 @@
     "react-navigation-tabs": "^2.8.11"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "babel-jest": "~25.2.6",
+    "jest": "~25.2.6",
+    "react-test-renderer": "~16.9.0",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
