--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "expo-av": "^8.1.0",
+    "expo-cli": "^3.26.2",
     "expo-font": "^8.1.0",
     "expo-in-app-purchases": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
